--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
-uvicorn==0.35.0
+uvicorn[standard]==0.35.0
+
